mule-user-guide/v/3.6/creating-module-archetypes.adoc
= 创建模块原型
:keywords: customize, custom archetypes

Mule提供了Maven原型，您可以将它用作您希望包含在Mule分布中的Mule模块的代码模板。这些模板包含一组实施说明和"todo"指针，可帮助您快速入门。 Mule模块原型将帮助您在几秒钟内生成量身定制的样板模块。

=== 更新现有的模块和传输

Module archetype允许开发人员创建新的Mule模块或升级现有的Mule模块，添加对模式和注册表引导的支持。有关更多信息，请参阅<<Updating an Existing Module>>。

按照以下说明为新的Mule模块创建模板文件，其中包括评论中所有必需的Java样板和详细的实施说明。

== 配置Maven

将以下内容添加到文件`settings.xml`（通常在您的Maven `conf`或`$HOME/.m2`目录中），以便Maven允许您执行Mule插件。

*settings.xml*
[source, xml, linenums]
----
<settings>
    <pluginGroups>
        <pluginGroup>org.mule.tools</pluginGroup>
    </pluginGroups>
    ...
</settings>
----

== 使用原型

首先，打开命令shell并切换到您想要创建模块的目录。

[source, code, linenums]
----
 > cd yourDir
----

接下来，您将执行原型并生成代码。如果这是您第一次运行此命令，Maven将为您下载原型。

[source, code, linenums]
----
> mvn mule-module-archetype:create -DartifactId=xxx -DmuleVersion=3.1.1                                   -DarchetypeArtifactId=mule-module-archetype
----

至少，你传入这些系统参数：

*  `artifactId`：项目的简称（如'myApp'）。这必须是小写字母，不能有空格，句点，连字符等。

*  `muleVersion`：您要使用的Mule项目原型的版本。这也将是用于生成的工件的默认Mule版本。

*  `archetypeArtifactId`：在运行模块原型时输入`mule-module-archetype`。
+
[NOTE]
====
*Running the archetype*

Maven默认使用原型的最新版本。如果你想为早期版本的Mule创建一个模块，这可能会导致问题。在这种情况下，运行mule-module-archetype，指定插件的完整版本，如下所示：

[source, code, linenums]
----
mvn org.mule.tools:mule-module-archetype:3.1.1:create ...
----
====
+
[NOTE]
====
*artifactId*

artifactId可以包含下划线或连字符等字符。但是，插件会将名称转换为适用于Java的可用表单。例如，如果将参数指定为**-DartifactId=My#Awesome-Mule_Project**，则将在该名称的目录中创建项目，但项目名称为*MyAwesomeMuleProject*，包名称为*.myawesomemuleproject*
====

插件会询问各种问题（如下所述），然后生成文件。您也可以通过在命令行中输入所有参数，在没有用户提示的情况下使用此插件。有关可以传入的参数的完整列表，请参阅<<Command Line Options>>。

在回答所有问题后，原型会使用您指定的模块名称创建一个目录，其中包含用Maven构建的POM文件，该文件是一个Mule配置文件（`src\main\resources\mule-config.xml`），其中包含传输和模块的名称空间指定并使用您指定的程序包路径创建第一个流程的占位符元素和`src\main\java`下的`package.html`文件。最后，它会在`src\test`下创建一些模板文件，以帮助您开始为模块创建单元测试。将在项目的根目录中创建一个新的`MULE-README.txt`文件，以解释创建了哪些文件。

== 问题解释

该插件会提示您回答有关您正在撰写的项目的几个问题。这些可能会根据您选择的选项而有所不同。输出示例如下所示。

==== 您是否在创建新模块（而不是更新现有模块）？

如果您正在创建一个全新的Mule模块，请在此处选择“是”。然后向导会问你想创建什么资源。如果您要更新现有模块，请选择否，然后查看<<Updating an Existing Module>>获取更多信息。以下问题会问你是否正在创建一个新模块。

==== 提供项目内容的描述：

您应该提供模块的准确描述，并提供您可以或不可以使用它的任何高级详细信息。本文将用于需要模块描述的地方。

==== 这个项目针对哪个版本的Mule？

您希望用于模块的Mule版本。这将默认为通过命令行传入的原型版本。

==== 您希望在此项目中包含哪些Mule传输？

您计划在本模块中使用的传输列表（例如HTTP和VM）的逗号分隔列表。这会将这些传输的命名空间添加到配置文件中。

==== 您希望在此项目中包含哪些Mule模块？

用这个模块扩展的模块列表（例如XML和Scripting）。这会将这些模块的名称空间添加到配置文件中。

==== 此模块是否具有用于在Xml中配置模块的自定义模式？

所有新模块应该定义一个XML模式来定义模块的配置方式。如果您不使用此选项，用户将不得不使用通用配置来使用您的模块。

==== 此模块在加载后是否可以在注册表中使用对象？

link:/mule-user-guide/v/3.6/bootstrapping-the-registry[注册表引导程序]是一个属性文件，它指定一旦加载模块就可以在Mule Registry中使用的简单对象的类名称。这对注册自定义转换器或表达式评估器很有用。

== 示例控制台输出

注意：在下面的示例中，MuleForge托管不再存在。在MuleForge提示符处输入*n*。

[source, code, linenums]
----
********************************************************************************

Are you creating a new module (rather than updating an existing one)? [y] or [n]
                                                                    [default: y]
********************************************************************************
y
[INFO] description:
********************************************************************************

                 Provide a description of what the module does:
                                                                     [default: ]
********************************************************************************
foo Bar
[INFO] muleVersion:
********************************************************************************

               Which version of Mule is this module targeted at?
                                                                [default: 3.1.1]
********************************************************************************

[INFO] forgeProject:
********************************************************************************

              Will this module be hosted on MuleForge? [y] or [n]
                                                                    [default: y]
********************************************************************************
n
[INFO] transports:
********************************************************************************

Which Mule transports do you want to include in this module?

(options: axis, cxf, ejb, file, ftp, http, https, imap, imaps, jbpm, jdbc,
          jetty, jetty-ssl, jms, jnp, multicast, pop3, pop3s, quartz, rmi, servlet,
          smtp, smtps, servlet, ssl, tls, stdio, tcp, udp, vm, xmpp):
                                                                   [default: vm]
********************************************************************************

[INFO] modules:
********************************************************************************

Which Mule modules do you want to include in this module?

(options: builders, client, jaas, jbossts, management, ognl, pgp, scripting,
spring-extras, sxc, xml):
                                                               [default: client]
********************************************************************************

[INFO] hasCustomSchema:
********************************************************************************

Will this module have a custom schema for configuring the module in Xml? [y] or [n]
                                                                    [default: y]
********************************************************************************

[INFO] hasBootstrap:
********************************************************************************

Will this module make objects available in the Registry as soon as it's loaded? [y] or [n]
                                                                    [default: n]
********************************************************************************


----

*Note*：OGNL和Sxc在Mule 3.6中被弃用，并将在Mule 4.0中被删除。另外，MuleForge不再存在。

== 更新现有模块

模块原型可用于更新现有模块和传输。它允许开发人员为模式配置和 link:/mule-user-guide/v/3.6/bootstrapping-the-registry[引导注册表]添加模板代码。它会保持现有的代码不变。

例如，如果您的现有模块或传输位于`/projects/foo`之下，则通过运行以下命令来更新项目：

[source, code, linenums]
----
cd /project/foomvn mule-module-archetype:create -DartifactId=foo -DmuleVersion=3.1.1 -DarchetypeArtifactId=mule-module-archetype
----

请注意，`artifactId`必须设置为您项目的名称。这确保了将使用相同的命名方案创建任何新类。

当你运行这个命令时，会提示你三个问题。第一个问题会问你这是否是一个新项目。确保选择'n'，以便向导将升级现有模块或传输。然后它会询问关于自定义模式和注册表引导程序的最后两个问题。回答问题后，将创建代码并在项目的根目录中创建一个新的`MULE-UPDATE-README.txt`文件，以解释创建了哪些文件。

== 命令行选项

默认情况下，此插件以交互模式运行，但可以使用以下选项以“无声”模式运行它：

[source, code, linenums]
----
-DinteractiveMode=false
----

以下选项可以传入：

[%header%autowidth.spread]
|===
|姓名 |示例 |默认值
|的groupId  |  - 。DgroupId = org.mule.applicationxxx  | org.mule.application <artifactId>
| {packagepath的{1}}  -  DpackagePath =组织/骡/应用 |无
| {运输{1}}  -  Dtransports = HTTP，VM  | CXF，文件，HTTP，JDBC，JMS标准输入输出，VM
| {muleVersion {1}}  -  DmuleVersion = 3.1.1  |无
| {的packageName {1}}  -  DpackageName = MYPKG  |无
|描述 |  -  Ddescription = "some text"  |无
| {模块{1}}  -  Dmodules = XML，脚本 |客户，管理，脚本，XML
|的basedir  |  -  Dbasedir = /项目/骡/工具 | <current dir>
| {包{1}}  -  Dpackage =组织/骡/应用/ MYPKG  |无
|的artifactId  |  -  DartifactId = myMuleProject  |骡应用 -  <artifactId>
|版本 |  -  Dversion = 1.0-SNAPSHOT  | <muleVersion>
|===
